--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
     <title>Massage Home Studio - Professionell massage i en avslappnande hemmamiljö</title>
+    <meta name="description"
+        content="Professionell massage i Göteborg. Pannee erbjuder klassisk massage, gravidmassage och behandlingar för rygg, nacke, fötter och händer i en lugn massagestudio. Boka din tid för återhämtning och välmående.">
+    <meta name="keywords"
+        content="massage göteborg, massage hemmastudio, pannee pimpila, klassisk massage, gravidmassage, ryggmassage, nackmassage, fotmassage, massage haga, massage linné, professionell massage, summer massage, näset, sommarmassage, haga, linné">
+    <link rel="canonical" href="https://massagehomestudio.se/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://massagehomestudio.se/">
+    <meta property="og:title" content="Massage Home Studio - Professionell massage i Göteborg">
+    <meta property="og:description"
+        content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
+    <meta property="og:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://massagehomestudio.se/">
+    <meta property="twitter:title" content="Massage Home Studio - Professionell massage i Göteborg">
+    <meta property="twitter:description"
+        content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
+    <meta property="twitter:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -45,7 +69,7 @@
         <section id="om" class="about">
             <div class="container about-content">
                 <div class="about-image">
-                    <img src="images/pannee.jpg" alt="Massagebehandling">
+                    <img src="images/pannee.jpg" alt="Pannee Pimpila, certifierad massageterapeut på Massage Home Studio">
                 </div>
                 <div class="about-text">
                     <h2>Välkommen till Massage Home Studio!</h2>
@@ -133,8 +157,8 @@
                     072&#8288;&#8211;&#8288;559&nbsp;11&nbsp;11
                 </a>
                 <br />E-post:
-                <a href="mailto:info@massagehomestudio.se">
-                    info@massagehomestudio.se
+                <a href="mailto:pannee@pimpila.asia">
+                    pannee@pimpila.asia
                 </a>
             </p>
             <div class="social-links">
@@ -169,6 +193,36 @@
         </div>
     </footer>
 
+    <!-- JSON-LD Structured Data for Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthAndBeautyBusiness",
+      "name": "Massage Home Studio",
+      "image": "https://massagehomestudio.se/icons/android-chrome-512x512.png",
+      "@id": "https://massagehomestudio.se/",
+      "url": "https://massagehomestudio.se/",
+      "telephone": "+46725591111",
+      "email": "pannee@pimpila.asia",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Bergsgatan 2B",
+        "addressLocality": "Göteborg",
+        "postalCode": "413 01",
+        "addressCountry": "SE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 57.69739,
+        "longitude": 11.95208
+      },
+      "sameAs": [
+        "https://www.facebook.com/MassageHomeStudio",
+        "https://www.instagram.com/MassageHomeStudio"
+      ] 
+    }
+    </script>
 
 </body>
 
