Added payment methods and some fixes

--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
                     pannee@pimpila.asia
                 </a>
             </p>
+            <p>Godkänd för F-skatt</p>
+            <div class="payment-methods">
+                <p>Vi accepterar följande betalmedel:</p>
+                <img src="images/cards-new.svg"
+                    alt="Godkända betalmedel: Visa, Mastercard, American Express, Swish, Klarna, Apple Pay, Google Pay med flera." />
+            </div>
             <div class="social-links">
                 <a href="https://www.facebook.com/MassageHomeStudio" target="_blank" rel="noopener noreferrer"
                     aria-label="Följ oss på Facebook">
@@ -214,8 +220,8 @@
       },
       "geo": {
         "@type": "GeoCoordinates",
-        "latitude": 57.69739,
-        "longitude": 11.95208
+        "latitude": 57.69733,
+        "longitude": 11.95220
       },
       "sameAs": [
         "https://www.facebook.com/MassageHomeStudio",
