--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <p>Godkänd för F-skatt</p>
             <div class="payment-methods">
                 <p>Vi accepterar följande betalmedel:</p>
-                <img src="images/cards-new.svg"
+                <img src="images/cards.svg"
                     alt="Godkända betalmedel: Visa, Mastercard, American Express, Swish, Klarna, Apple Pay, Google Pay med flera." />
             </div>
             <div class="social-links">
