--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
         <header>
             <div class="container">
                 <nav>
-                    <a href="/" class="logo-text">
-                        <img src="images/leaf.svg" alt="Massage Home Studio löv-logotyp" class="leaf-icon">
-                        <div>
-                            Massage Home
-                            <span>Studio</span>
-                        </div>
-                    </a>
+                    <a href="/" class="logo-wide"><img src="images/logo-wide.svg" alt="Massage Home Studio logotyp"></a>
                     <ul class="nav-links">
                         <li><a href="#om" class="cta-button nav-cta-button">Om Pannee</a></li>
                         <li><a href="#behandlingar" class="cta-button nav-cta-button">Behandlingar</a></li>
