--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
       "@context": "https://schema.org",
       "@type": "HealthAndBeautyBusiness",
       "name": "Massage Home Studio",
-      "image": "https://massagehomestudio.se/icons/android-chrome-512x512.png",
+      "logo": "https://massagehomestudio.se/image/logo.svg",
+      "image": "https://massagehomestudio.se/image/pannee.jpg",
       "@id": "https://massagehomestudio.se/",
       "url": "https://massagehomestudio.se/",
       "telephone": "+46725591111",
@@ -212,6 +213,29 @@
         "postalCode": "413 01",
         "addressCountry": "SE"
       },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "10:00",
+          "closes": "20:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Saturday",
+            "Sunday"
+          ],
+          "opens": "11:00",
+          "closes": "20:00"
+        }
+      ],
       "geo": {
         "@type": "GeoCoordinates",
         "latitude": 57.69733,
