--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     <meta property="twitter:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
 
     <link rel="stylesheet" href="css/style.css">
+
+    <script type="application/ld+json">
+    {
+      "@context" : "https://schema.org",
+      "@type" : "WebSite",
+      "name" : "Massage Home Studio",
+      "alternateName": [ "Pannee Pimpila", "Summer Massage" ],
+      "url" : "https://massagehomestudio.se/"
+    }
+    </script>
 </head>
 
 <body>
@@ -63,7 +73,8 @@
         <section id="om" class="about">
             <div class="container about-content">
                 <div class="about-image">
-                    <img src="images/pannee.jpg" alt="Pannee Pimpila, certifierad massageterapeut på Massage Home Studio">
+                    <img src="images/pannee.jpg"
+                        alt="Pannee Pimpila, certifierad massageterapeut på Massage Home Studio">
                 </div>
                 <div class="about-text">
                     <h2>Välkommen till Massage Home Studio!</h2>
@@ -199,6 +210,7 @@
       "@context": "https://schema.org",
       "@type": "HealthAndBeautyBusiness",
       "name": "Massage Home Studio",
+      "legalName": "Pannee Pimpila",
       "logo": "https://massagehomestudio.se/image/logo.svg",
       "image": "https://massagehomestudio.se/image/pannee.jpg",
       "@id": "https://massagehomestudio.se/",
