--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       "url" : "https://massagehomestudio.se/"
     }
     </script>
+
+    <script defer src="https://cloud.umami.is/script.js"
+        data-website-id="2d0fcdef-1e25-4755-a57a-098718d5abb1"></script>
 </head>
 
 <body>
