--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Massage Home Studio - Professionell massage i en avslappnande hemmamiljö</title>
+    <title>Massage Home Studio - Massage som gör skillnad</title>
     <meta name="description"
         content="Professionell massage i Göteborg. Pannee erbjuder klassisk massage, gravidmassage och behandlingar för rygg, nacke, fötter och händer i en lugn massagestudio. Boka din tid för återhämtning och välmående.">
     <meta name="keywords"
@@ -16,7 +16,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://massagehomestudio.se/">
-    <meta property="og:title" content="Massage Home Studio - Professionell massage i Göteborg">
+    <meta property="og:locale" content="sv_SE" />
+    <meta property="og:title" content="Massage Home Studio - Massage som gör skillnad">
     <meta property="og:description"
         content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
     <meta property="og:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
@@ -24,7 +25,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://massagehomestudio.se/">
-    <meta property="twitter:title" content="Massage Home Studio - Professionell massage i Göteborg">
+    <meta property="twitter:title" content="Massage Home Studio - Massage som gör skillnad">
     <meta property="twitter:description"
         content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
     <meta property="twitter:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
