Add and update redirects

--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="robots" content="noindex">
-    <meta http-equiv="refresh" content="0; url=https://cloud.umami.is/q/z1yrVexmm">
+    <meta http-equiv="refresh" content="0; url=https://cloud.umami.is/q/T4ZIZJJvo">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="https://cloud.umami.is/script.js"
         data-website-id="2d0fcdef-1e25-4755-a57a-098718d5abb1"></script>
 </head>
 
-<body onload="window.location = 'https://cloud.umami.is/q/z1yrVexmm'">
-    <noscript><a href="https://cloud.umami.is/q/z1yrVexmm">Klicka här för att komma till bokningssidan.</a></noscript>
+<body onload="window.location = 'https://cloud.umami.is/q/T4ZIZJJvo'">
+    <noscript><a href="https://cloud.umami.is/q/T4ZIZJJvo">Klicka här för att komma till integritetspolicyn.</a></noscript>
 </body>
