--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                 <img src="images/cards.svg"
                     alt="Godkända betalmedel: Visa, Mastercard, American Express, Swish, Klarna, Apple Pay, Google Pay med flera." />
             </div>
-            <p><a href="booking.html/terms-and-conditions" target="_blank"
+            <p><a href="terms-and-conditions.html" target="_blank"
                     rel="noopener noreferrer">Allmänna villkor</a><a class="footer-privacy-link"
-                    href="booking.html/privacy-notice" target="_blank"
+                    href="privacy-notice.html" target="_blank"
                     rel="noopener noreferrer">Integritetspolicy</a></p>
             <p style="margin-top: 30px; font-size: 0.8rem;">&copy; <noscript>2025</noscript>
                 <script> /* Generera årtal dynamiskt */
