--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
     <meta property="twitter:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
 
+    <!-- Favicon / App Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <meta name="theme-color" content="#e3ddcd">
+
     <link rel="stylesheet" href="css/style.css">
 
     <script type="application/ld+json">
