Update price and booking text

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             muskelknutor och förbättra rörligheten, eller en avslappnande variant för att uppnå total
                             avkoppling och välbefinnande. En stunds klassisk massage ger dig ny energi och ett förnyat
                             fokus i vardagen.</p>
-                        <a href="booking.html" class="price-btn">Boka & Se Pris</a>
+                        <a href="booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                     <div class="service-card">
@@ -136,7 +136,7 @@
                             stress. Denna fokuserade massage arbetar djupt för att lösa upp stelhet och värk i
                             skulderpartiet och nacken, vilket ger dig omedelbar lättnad. Det är den optimala
                             behandlingen för att förbättra hållningen och återställa rörligheten.</p>
-                        <a href="booking.html" class="price-btn">Boka & Se Pris</a>
+                        <a href="booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                     <div class="service-card">
@@ -144,7 +144,7 @@
                         <p>Ge dina händer och fötter en välbehövlig paus. Denna fokuserade massage lindrar spänningar,
                             förbättrar blodcirkulationen och ger en djupt jordande känsla av lugn som sprider sig genom
                             hela kroppen. Det är den perfekta behandlingen för snabb och effektiv avslappning.</p>
-                        <a href="booking.html" class="price-btn">Boka & Se Pris</a>
+                        <a href="booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                     <div class="service-card">
@@ -153,7 +153,7 @@
                             fokusera på vanliga besvär som ryggvärk och svullnad, främjar massagen ökat välbefinnande
                             och kan bidra till bättre sömn. Unna dig själv en lugn och omhändertagande stund.
                         </p>
-                        <a href="booking.html" class="price-btn">Boka & Se Pris</a>
+                        <a href="booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                 </div>
