--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- SEO Meta Tags -->
     <title>Massage Home Studio - Massage som gör skillnad</title>
     <meta name="description"
         content="Professionell massage i Göteborg. Pannee erbjuder klassisk massage, gravidmassage och behandlingar för rygg, nacke, fötter och händer i en lugn massagestudio. Boka din tid för återhämtning och välmående.">
     <meta name="keywords"
         content="massage göteborg, massage hemmastudio, pannee pimpila, klassisk massage, gravidmassage, ryggmassage, nackmassage, fotmassage, massage haga, massage linné, professionell massage, summer massage, näset, sommarmassage, haga, linné">
+    <meta name="author" content="Pannee Pimpila">
+    <meta name="contact" content="+46725591111 pannee@pimpila.asia 'Bergsgatan 2B, 413 01 Göteborg, Sweden'">
     <link rel="canonical" href="https://massagehomestudio.se/">
 
     <!-- Open Graph / Facebook -->
@@ -41,15 +42,51 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script type="application/ld+json">
-    {
-      "@context" : "https://schema.org",
-      "@type" : "WebSite",
-      "name" : "Massage Home Studio",
-      "alternateName": [ "Pannee Pimpila", "Summer Massage" ],
-      "url" : "https://massagehomestudio.se/"
-    }
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "Massage Home Studio",
+            "alternateName": [
+                "Pannee Pimpila",
+                "Summer Massage"
+            ],
+            "url": "https://massagehomestudio.se/"
+        }
     </script>
-
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "HealthAndBeautyBusiness",
+            "url": "https://massagehomestudio.se/",
+            "logo": "https://massagehomestudio.se/icons/android-chrome-512x512.png",
+            "image": "https://massagehomestudio.se/images/pannee.jpg",
+            "name": "Massage Home Studio",
+            "legalName": "Pimpila, Pannee",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Bergsgatan 2B",
+                "addressLocality": "Göteborg",
+                "postalCode": "41301",
+                "addressCountry": "SE"
+            },
+            "telephone": "+46725591111",
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 57.6972742085428,
+                "longitude": 11.952175298413316
+            },
+            "openingHours": [
+                "Mo-Fr 10:00-20:00",
+                "Sa,Su 11:00-20:00"
+            ],
+            "priceRange": "$$",
+            "sameAs": [
+                "https://www.facebook.com/MassageHomeStudio",
+                "https://www.instagram.com/MassageHomeStudio/",
+                "https://www.sumupbookings.com/massagehomestudio"
+            ]
+        }
+    </script>
     <script defer src="https://cloud.umami.is/script.js"
         data-website-id="2d0fcdef-1e25-4755-a57a-098718d5abb1"></script>
 </head>
