Add JSON-LD description

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
                 "addressCountry": "SE"
             },
             "telephone": "+46725591111",
+            "description": [
+                {
+                    "@language": "en",
+                    "@value": "Professional massage in a soothing home setting. Allow your body and mind to recharge."
+                },
+                {
+                    "@language": "sv",
+                    "@value": "Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig."
+                }
+            ],
             "geo": {
                 "@type": "GeoCoordinates",
                 "latitude": 57.6972742085428,
