Remove duplicate data

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- JSON-LD data -->
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -57,6 +58,7 @@
         {
             "@context": "https://schema.org",
             "@type": "HealthAndBeautyBusiness",
+            "@id": "https://massagehomestudio.se/",
             "url": "https://massagehomestudio.se/",
             "logo": "https://massagehomestudio.se/icons/android-chrome-512x512.png",
             "image": "https://massagehomestudio.se/images/pannee.jpg",
@@ -262,62 +264,6 @@
             </p>
         </div>
     </footer>
-
-    <!-- JSON-LD Structured Data for Local Business -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "HealthAndBeautyBusiness",
-      "name": "Massage Home Studio",
-      "legalName": "Pannee Pimpila",
-      "logo": "https://massagehomestudio.se/image/logo.svg",
-      "image": "https://massagehomestudio.se/image/pannee.jpg",
-      "@id": "https://massagehomestudio.se/",
-      "url": "https://massagehomestudio.se/",
-      "telephone": "+46725591111",
-      "email": "pannee@pimpila.asia",
-      "priceRange": "$$",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Bergsgatan 2B",
-        "addressLocality": "Göteborg",
-        "postalCode": "413 01",
-        "addressCountry": "SE"
-      },
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday"
-          ],
-          "opens": "10:00",
-          "closes": "20:00"
-        },
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Saturday",
-            "Sunday"
-          ],
-          "opens": "11:00",
-          "closes": "20:00"
-        }
-      ],
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 57.69733,
-        "longitude": 11.95220
-      },
-      "sameAs": [
-        "https://www.facebook.com/MassageHomeStudio",
-        "https://www.instagram.com/MassageHomeStudio"
-      ] 
-    }
-    </script>
 
 </body>
 
