Add alternate names

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             "image": "https://massagehomestudio.se/images/pannee.jpg",
             "name": "Massage Home Studio",
             "legalName": "Pimpila, Pannee",
+            "alternateName": [
+                "Pannee Pimpila",
+                "Summer Massage"
+            ],
             "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "Bergsgatan 2B",
@@ -72,6 +76,7 @@
                 "addressCountry": "SE"
             },
             "telephone": "+46725591111",
+            "email": "pannee@pimpila.asia",
             "description": [
                 {
                     "@language": "en",
@@ -94,7 +99,7 @@
             "priceRange": "$$",
             "sameAs": [
                 "https://www.facebook.com/MassageHomeStudio",
-                "https://www.instagram.com/MassageHomeStudio/",
+                "https://www.instagram.com/MassageHomeStudio",
                 "https://www.sumupbookings.com/massagehomestudio"
             ]
         }
