--- a/booking.html
+++ b/booking.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="robots" content="noindex">
     <meta http-equiv="refresh" content="0; url=https://cloud.umami.is/q/z1yrVexmm">
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="https://cloud.umami.is/script.js"
+    <link rel="stylesheet" href="/css/style.css">
+    <script defer src="//cloud.umami.is/script.js"
         data-website-id="2d0fcdef-1e25-4755-a57a-098718d5abb1"></script>
 </head>
 
