--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <meta property="twitter:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
 
     <!-- Favicon / App Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#e3ddcd">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- JSON-LD data -->
     <script type="application/ld+json">
         {
-            "@context": "https://schema.org",
+            "@context": "https://schema.org/",
             "@type": "WebSite",
             "name": "Massage Home Studio",
             "alternateName": [
@@ -56,7 +56,7 @@
     </script>
     <script type="application/ld+json">
         {
-            "@context": "https://schema.org",
+            "@context": "https://schema.org/",
             "@type": "HealthAndBeautyBusiness",
             "@id": "https://massagehomestudio.se/",
             "url": "https://massagehomestudio.se/",
@@ -98,13 +98,13 @@
             ],
             "priceRange": "$$",
             "sameAs": [
-                "https://www.facebook.com/MassageHomeStudio",
-                "https://www.instagram.com/MassageHomeStudio",
-                "https://www.sumupbookings.com/massagehomestudio"
+                "https://www.facebook.com/MassageHomeStudio/",
+                "https://www.instagram.com/MassageHomeStudio/",
+                "https://www.sumupbookings.com/massagehomestudio/"
             ]
         }
     </script>
-    <script defer src="https://cloud.umami.is/script.js"
+    <script defer src="//cloud.umami.is/script.js"
         data-website-id="2d0fcdef-1e25-4755-a57a-098718d5abb1"></script>
 </head>
 
@@ -114,12 +114,12 @@
         <header>
             <div class="container">
                 <nav>
-                    <a href="/" class="logo-wide"><img src="images/logo-wide.svg" alt="Massage Home Studio logotyp"></a>
+                    <a href="/" class="logo-wide"><img src="/images/logo-wide.svg" alt="Massage Home Studio logotyp"></a>
                     <ul class="nav-links">
                         <li><a href="#om" class="cta-button nav-cta-button">Om Pannee</a></li>
                         <li><a href="#behandlingar" class="cta-button nav-cta-button">Behandlingar</a></li>
                         <li>
-                            <a href="booking.html"
+                            <a href="/booking.html"
                                 class="cta-button nav-cta-button">Boka tid</a>
                         </li>
                     </ul>
@@ -132,14 +132,14 @@
                 <h1>Massage som gör skillnad</h1>
                 <p>Professionell massage i en avslappnande hemmamiljö.<br>Låt din kropp och ditt sinne återhämta sig.
                 </p>
-                <a href="booking.html" class="cta-button">Boka din behandling nu</a>
+                <a href="/booking.html" class="cta-button">Boka din behandling nu</a>
             </div>
         </section>
 
         <section id="om" class="about">
             <div class="container about-content">
                 <div class="about-image">
-                    <img src="images/pannee.jpg"
+                    <img src="/images/pannee.jpg"
                         alt="Pannee Pimpila, certifierad massageterapeut på Massage Home Studio">
                 </div>
                 <div class="about-text">
@@ -181,7 +181,7 @@
                             muskelknutor och förbättra rörligheten, eller en avslappnande variant för att uppnå total
                             avkoppling och välbefinnande. En stunds klassisk massage ger dig ny energi och ett förnyat
                             fokus i vardagen.</p>
-                        <a href="booking.html" class="price-btn">Se pris & boka</a>
+                        <a href="/booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                     <div class="service-card">
@@ -190,7 +190,7 @@
                             stress. Denna fokuserade massage arbetar djupt för att lösa upp stelhet och värk i
                             skulderpartiet och nacken, vilket ger dig omedelbar lättnad. Det är den optimala
                             behandlingen för att förbättra hållningen och återställa rörligheten.</p>
-                        <a href="booking.html" class="price-btn">Se pris & boka</a>
+                        <a href="/booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                     <div class="service-card">
@@ -198,7 +198,7 @@
                         <p>Ge dina händer och fötter en välbehövlig paus. Denna fokuserade massage lindrar spänningar,
                             förbättrar blodcirkulationen och ger en djupt jordande känsla av lugn som sprider sig genom
                             hela kroppen. Det är den perfekta behandlingen för snabb och effektiv avslappning.</p>
-                        <a href="booking.html" class="price-btn">Se pris & boka</a>
+                        <a href="/booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                     <div class="service-card">
@@ -207,7 +207,7 @@
                             fokusera på vanliga besvär som ryggvärk och svullnad, främjar massagen ökat välbefinnande
                             och kan bidra till bättre sömn. Unna dig själv en lugn och omhändertagande stund.
                         </p>
-                        <a href="booking.html" class="price-btn">Se pris & boka</a>
+                        <a href="/booking.html" class="price-btn">Se pris & boka</a>
                     </div>
 
                 </div>
@@ -218,7 +218,7 @@
 
     <footer>
         <div class="container">
-            <img src="images/logo.svg" alt="Massage Home Studio Logotyp" class="footer-logo">
+            <img src="/images/logo.svg" alt="Massage Home Studio Logotyp" class="footer-logo">
             <p>Adress:
                 <a href="https://maps.app.goo.gl/sPEJGBRyJ96EMyxe6" target="_blank" rel="noopener noreferrer">
                     Bergsgatan&nbsp;2B, 413&nbsp;01&nbsp;&nbsp;Göteborg
@@ -233,16 +233,16 @@
                 </a>
             </p>
             <div class="social-links">
-                <a href="https://www.facebook.com/MassageHomeStudio" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.facebook.com/MassageHomeStudio/" target="_blank" rel="noopener noreferrer"
                     aria-label="Följ oss på Facebook">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg xmlns="//www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path
                             d="M22,12c0-5.52-4.48-10-10-10S2,6.48,2,12c0,4.84,3.44,8.87,8,9.8V15H8v-3h2V9.5C10,7.57,11.57,6,13.5,6H16v3h-1.5c-1,0-1.5,0.5-1.5,1.5V12h3l-0.5,3h-2.5v6.8C18.56,20.87,22,16.84,22,12z" />
                     </svg>
                 </a>
-                <a href="https://www.instagram.com/MassageHomeStudio" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.instagram.com/MassageHomeStudio/" target="_blank" rel="noopener noreferrer"
                     aria-label="Följ oss på Instagram">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg xmlns="//www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path
                             d="M12,2C8.7,2,8.3,2.1,7.1,2.2C5.9,2.3,5.1,2.5,4.4,2.8C3.7,3.1,3.1,3.7,2.8,4.4C2.5,5.1,2.3,5.9,2.2,7.1C2.1,8.3,2,8.7,2,12s0.1,3.7,0.2,4.9c0.1,1.2,0.3,2,0.6,2.7c0.3,0.7,0.9,1.3,1.6,1.6c0.7,0.3,1.5,0.5,2.7,0.6c1.2,0.1,1.6,0.2,4.9,0.2s3.7-0.1,4.9-0.2c1.2-0.1,2-0.3,2.7-0.6c0.7-0.3,1.3-0.9,1.6-1.6c0.3-0.7,0.5-1.5,0.6-2.7c0.1-1.2,0.2-1.6,0.2-4.9s-0.1-3.7-0.2-4.9c-0.1-1.2-0.3-2-0.6-2.7c-0.3-0.7-0.9-1.3-1.6-1.6C19,2.5,18.2,2.3,17,2.2C15.8,2.1,15.3,2,12,2z M12,4c3.2,0,3.6,0,4.8,0.1c1.1,0,1.7,0.2,2.1,0.4c0.5,0.2,0.8,0.5,1.1,1.1c0.2,0.4,0.4,1,0.4,2.1c0.1,1.2,0.1,1.6,0.1,4.8s0,3.6-0.1,4.8c0,1.1-0.2,1.7-0.4,2.1c-0.2,0.5-0.5,0.8-1.1,1.1c-0.4,0.2-1,0.4-2.1,0.4c-1.2,0.1-1.6,0.1-4.8,0.1s-3.6,0-4.8-0.1c-1.1,0-1.7-0.2-2.1-0.4c-0.5-0.2-0.8-0.5-1.1-1.1c-0.2-0.4-0.4-1-0.4-2.1c-0.1-1.2-0.1-1.6-0.1-4.8s0-3.6,0.1-4.8c0-1.1,0.2-1.7,0.4-2.1c0.2-0.5,0.5-0.8,1.1-1.1c0.4-0.2,1-0.4,2.1-0.4C8.4,4,8.8,4,12,4z M12,7.3c-2.6,0-4.7,2.1-4.7,4.7s2.1,4.7,4.7,4.7s4.7-2.1,4.7-4.7S14.6,7.3,12,7.3z M12,15c-1.7,0-3-1.3-3-3s1.3-3,3-3s3,1.3,3,3S13.7,15,12,15z M16.8,6.2c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1s1.1-0.5,1.1-1.1S17.4,6.2,16.8,6.2z" />
                     </svg>
@@ -251,12 +251,12 @@
             <p>Godkänd för F-skatt</p>
             <div class="payment-methods">
                 <p>Vi accepterar följande betalmedel:</p>
-                <img src="images/cards.svg"
+                <img src="/images/cards.svg"
                     alt="Godkända betalmedel: Visa, Mastercard, American Express, Swish, Klarna, Apple Pay, Google Pay med flera." />
             </div>
-            <p><a href="terms-and-conditions.html" target="_blank"
+            <p><a href="/terms-and-conditions.html" target="_blank"
                     rel="noopener noreferrer">Allmänna villkor</a><a class="footer-privacy-link"
-                    href="privacy-notice.html" target="_blank"
+                    href="/privacy-notice.html" target="_blank"
                     rel="noopener noreferrer">Integritetspolicy</a></p>
             <p style="margin-top: 30px; font-size: 0.8rem;">&copy; <noscript>2025</noscript>
                 <script> /* Generera årtal dynamiskt */
