--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <!-- Siddesign -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- SEO Meta Tags -->
-    <title>Massage Home Studio - Massage som gör skillnad</title>
+    <link rel="stylesheet" href="/css/style.css">
+
+    <!-- Sökmotoroptimeringar -->
+    <title>Massage Home Studio</title>
     <meta name="description"
         content="Professionell massage i Göteborg. Pannee erbjuder klassisk massage, gravidmassage och behandlingar för rygg, nacke, fötter och händer i en lugn massagestudio. Boka din tid för återhämtning och välmående.">
     <meta name="keywords"
@@ -23,7 +27,7 @@
         content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
     <meta property="og:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
 
-    <!-- Twitter -->
+    <!-- Twitter / X -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://massagehomestudio.se/">
     <meta property="twitter:title" content="Massage Home Studio - Massage som gör skillnad">
@@ -31,15 +35,17 @@
         content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
     <meta property="twitter:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
 
-    <!-- Favicon / App Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <!-- Favicon / App-ikoner -->
+    <link rel="icon" type="image/svg+xml" href="/image/leaf.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="Massage Home Studio">
     <meta name="theme-color" content="#e3ddcd">
-
-    <link rel="stylesheet" href="/css/style.css">
 
     <!-- JSON-LD data -->
     <script type="application/ld+json">
@@ -104,6 +110,8 @@
             ]
         }
     </script>
+
+    <!-- GDPR-säker sidstatistik -->
     <script defer src="//cloud.umami.is/script.js"
         data-website-id="2d0fcdef-1e25-4755-a57a-098718d5abb1"></script>
 </head>
