Fix validation errors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://massagehomestudio.se/">
-    <meta property="og:locale" content="sv_SE" />
+    <meta property="og:locale" content="sv_SE">
     <meta property="og:title" content="Massage Home Studio - Massage som gör skillnad">
     <meta property="og:description"
         content="Professionell massage i en avslappnande hemmamiljö. Låt din kropp och ditt sinne återhämta sig.">
@@ -36,8 +36,8 @@
     <meta property="twitter:image" content="https://massagehomestudio.se/icons/android-chrome-512x512.png">
 
     <!-- Favicon / App-ikoner -->
-    <link rel="icon" type="image/svg+xml" href="/image/leaf.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/image/leaf.svg">
+    <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -231,11 +231,11 @@
                 <a href="https://maps.app.goo.gl/sPEJGBRyJ96EMyxe6" target="_blank" rel="noopener noreferrer">
                     Bergsgatan&nbsp;2B, 413&nbsp;01&nbsp;&nbsp;Göteborg
                 </a>
-                <br />Telefon:
+                <br>Telefon:
                 <a href="tel:+46725591111">
                     072&#8288;&#8211;&#8288;559&nbsp;11&nbsp;11
                 </a>
-                <br />E-post:
+                <br>E-post:
                 <a href="mailto:pannee@pimpila.asia">
                     pannee@pimpila.asia
                 </a>
@@ -243,16 +243,16 @@
             <div class="social-links">
                 <a href="https://www.facebook.com/MassageHomeStudio/" target="_blank" rel="noopener noreferrer"
                     aria-label="Följ oss på Facebook">
-                    <svg xmlns="//www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path
-                            d="M22,12c0-5.52-4.48-10-10-10S2,6.48,2,12c0,4.84,3.44,8.87,8,9.8V15H8v-3h2V9.5C10,7.57,11.57,6,13.5,6H16v3h-1.5c-1,0-1.5,0.5-1.5,1.5V12h3l-0.5,3h-2.5v6.8C18.56,20.87,22,16.84,22,12z" />
+                            d="M22,12c0-5.52-4.48-10-10-10S2,6.48,2,12c0,4.84,3.44,8.87,8,9.8V15H8v-3h2V9.5C10,7.57,11.57,6,13.5,6H16v3h-1.5c-1,0-1.5,0.5-1.5,1.5V12h3l-0.5,3h-2.5v6.8C18.56,20.87,22,16.84,22,12z">
                     </svg>
                 </a>
                 <a href="https://www.instagram.com/MassageHomeStudio/" target="_blank" rel="noopener noreferrer"
                     aria-label="Följ oss på Instagram">
-                    <svg xmlns="//www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path
-                            d="M12,2C8.7,2,8.3,2.1,7.1,2.2C5.9,2.3,5.1,2.5,4.4,2.8C3.7,3.1,3.1,3.7,2.8,4.4C2.5,5.1,2.3,5.9,2.2,7.1C2.1,8.3,2,8.7,2,12s0.1,3.7,0.2,4.9c0.1,1.2,0.3,2,0.6,2.7c0.3,0.7,0.9,1.3,1.6,1.6c0.7,0.3,1.5,0.5,2.7,0.6c1.2,0.1,1.6,0.2,4.9,0.2s3.7-0.1,4.9-0.2c1.2-0.1,2-0.3,2.7-0.6c0.7-0.3,1.3-0.9,1.6-1.6c0.3-0.7,0.5-1.5,0.6-2.7c0.1-1.2,0.2-1.6,0.2-4.9s-0.1-3.7-0.2-4.9c-0.1-1.2-0.3-2-0.6-2.7c-0.3-0.7-0.9-1.3-1.6-1.6C19,2.5,18.2,2.3,17,2.2C15.8,2.1,15.3,2,12,2z M12,4c3.2,0,3.6,0,4.8,0.1c1.1,0,1.7,0.2,2.1,0.4c0.5,0.2,0.8,0.5,1.1,1.1c0.2,0.4,0.4,1,0.4,2.1c0.1,1.2,0.1,1.6,0.1,4.8s0,3.6-0.1,4.8c0,1.1-0.2,1.7-0.4,2.1c-0.2,0.5-0.5,0.8-1.1,1.1c-0.4,0.2-1,0.4-2.1,0.4c-1.2,0.1-1.6,0.1-4.8,0.1s-3.6,0-4.8-0.1c-1.1,0-1.7-0.2-2.1-0.4c-0.5-0.2-0.8-0.5-1.1-1.1c-0.2-0.4-0.4-1-0.4-2.1c-0.1-1.2-0.1-1.6-0.1-4.8s0-3.6,0.1-4.8c0-1.1,0.2-1.7,0.4-2.1c0.2-0.5,0.5-0.8,1.1-1.1c0.4-0.2,1-0.4,2.1-0.4C8.4,4,8.8,4,12,4z M12,7.3c-2.6,0-4.7,2.1-4.7,4.7s2.1,4.7,4.7,4.7s4.7-2.1,4.7-4.7S14.6,7.3,12,7.3z M12,15c-1.7,0-3-1.3-3-3s1.3-3,3-3s3,1.3,3,3S13.7,15,12,15z M16.8,6.2c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1s1.1-0.5,1.1-1.1S17.4,6.2,16.8,6.2z" />
+                            d="M12,2C8.7,2,8.3,2.1,7.1,2.2C5.9,2.3,5.1,2.5,4.4,2.8C3.7,3.1,3.1,3.7,2.8,4.4C2.5,5.1,2.3,5.9,2.2,7.1C2.1,8.3,2,8.7,2,12s0.1,3.7,0.2,4.9c0.1,1.2,0.3,2,0.6,2.7c0.3,0.7,0.9,1.3,1.6,1.6c0.7,0.3,1.5,0.5,2.7,0.6c1.2,0.1,1.6,0.2,4.9,0.2s3.7-0.1,4.9-0.2c1.2-0.1,2-0.3,2.7-0.6c0.7-0.3,1.3-0.9,1.6-1.6c0.3-0.7,0.5-1.5,0.6-2.7c0.1-1.2,0.2-1.6,0.2-4.9s-0.1-3.7-0.2-4.9c-0.1-1.2-0.3-2-0.6-2.7c-0.3-0.7-0.9-1.3-1.6-1.6C19,2.5,18.2,2.3,17,2.2C15.8,2.1,15.3,2,12,2z M12,4c3.2,0,3.6,0,4.8,0.1c1.1,0,1.7,0.2,2.1,0.4c0.5,0.2,0.8,0.5,1.1,1.1c0.2,0.4,0.4,1,0.4,2.1c0.1,1.2,0.1,1.6,0.1,4.8s0,3.6-0.1,4.8c0,1.1-0.2,1.7-0.4,2.1c-0.2,0.5-0.5,0.8-1.1,1.1c-0.4,0.2-1,0.4-2.1,0.4c-1.2,0.1-1.6,0.1-4.8,0.1s-3.6,0-4.8-0.1c-1.1,0-1.7-0.2-2.1-0.4c-0.5-0.2-0.8-0.5-1.1-1.1c-0.2-0.4-0.4-1-0.4-2.1c-0.1-1.2-0.1-1.6-0.1-4.8s0-3.6,0.1-4.8c0-1.1,0.2-1.7,0.4-2.1c0.2-0.5,0.5-0.8,1.1-1.1c0.4-0.2,1-0.4,2.1-0.4C8.4,4,8.8,4,12,4z M12,7.3c-2.6,0-4.7,2.1-4.7,4.7s2.1,4.7,4.7,4.7s4.7-2.1,4.7-4.7S14.6,7.3,12,7.3z M12,15c-1.7,0-3-1.3-3-3s1.3-3,3-3s3,1.3,3,3S13.7,15,12,15z M16.8,6.2c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1s1.1-0.5,1.1-1.1S17.4,6.2,16.8,6.2z">
                     </svg>
                 </a>
             </div>
@@ -260,7 +260,7 @@
             <div class="payment-methods">
                 <p>Vi accepterar följande betalmedel:</p>
                 <img src="/images/cards.svg"
-                    alt="Godkända betalmedel: Visa, Mastercard, American Express, Swish, Klarna, Apple Pay, Google Pay med flera." />
+                    alt="Godkända betalmedel: Visa, Mastercard, American Express, Swish, Klarna, Apple Pay, Google Pay med flera.">
             </div>
             <p><a href="/terms-and-conditions.html" target="_blank"
                     rel="noopener noreferrer">Allmänna villkor</a><a class="footer-privacy-link"
