Better alt tags

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <header>
             <div class="container">
                 <nav>
-                    <a href="/" class="logo-wide"><img src="/images/logo-wide.svg" alt="Massage Home Studio logotyp"></a>
+                    <a href="/" class="logo-wide"><img src="/images/logo-wide.svg" alt="Horisontell logotyp för &quot;Massage Home Studio&quot;. Till vänster syns en illustration av ett grönt löv. Till höger om lövet står orden staplade på varandra i versaler: &quot;Massage&quot; och &quot;Home&quot; i grönt med seriffer, och underst &quot;Studio&quot; i mindre, guldfärgad text. utan seriffer. Bakgrunden är ljust beige."></a>
                     <ul class="nav-links">
                         <li><a href="#om" class="cta-button nav-cta-button">Om Pannee</a></li>
                         <li><a href="#behandlingar" class="cta-button nav-cta-button">Behandlingar</a></li>
@@ -148,7 +148,7 @@
             <div class="container about-content">
                 <div class="about-image">
                     <img src="/images/pannee.jpg"
-                        alt="Pannee Pimpila, certifierad massageterapeut på Massage Home Studio">
+                        alt="Pannee Pimpila, certifierad massageterapeut på &quot;Massage Home Studio&quot;, sitter på kanten av en massagebänk i en harmonisk miljö. Hon bär en svart pikétröja med studions logotyp. I bakgrunden syns en varmt lysande bordslampa, en klocka och en fåtölj med en filt.">
                 </div>
                 <div class="about-text">
                     <h2>Välkommen till Massage Home Studio!</h2>
@@ -226,7 +226,7 @@
 
     <footer>
         <div class="container">
-            <img src="/images/logo.svg" alt="Massage Home Studio Logotyp" class="footer-logo">
+            <img src="/images/logo.svg" alt="Logotyp för Massage Home Studio. Överst syns en illustration av ett grönt löv. Därunder står texten &quot;Massage Home&quot; i gröna versaler med seriffer, följt av ordet &quot;Studio&quot; i mindre, guldfärgade versaler utan seriffer. Bakgrunden är ljust beige." class="footer-logo">
             <p>Adress:
                 <a href="https://maps.app.goo.gl/sPEJGBRyJ96EMyxe6" target="_blank" rel="noopener noreferrer">
                     Bergsgatan&nbsp;2B, 413&nbsp;01&nbsp;&nbsp;Göteborg
@@ -260,7 +260,7 @@
             <div class="payment-methods">
                 <p>Vi accepterar följande betalmedel:</p>
                 <img src="/images/cards.svg"
-                    alt="Godkända betalmedel: Visa, Mastercard, American Express, Swish, Klarna, Apple Pay, Google Pay med flera.">
+                    alt="Logotyper för accepterade betalmetoder: Visa, Visa Electron, V Pay, American Express, Discover, Mastercard, Maestro, UnionPay, JCB, Samsung Pay, Google Pay, Apple Pay samt Swish.">
             </div>
             <p><a href="/terms-and-conditions.html" target="_blank"
                     rel="noopener noreferrer">Allmänna villkor</a><a class="footer-privacy-link"
